[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
geojson = "0.24"
indicatif = "0.17"
log = "0.4"
reqwest = "0.11"
simple-logging = "2"
slippy-map-tiles = "0.16"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
